# Mercury

./: .gitignore  .pnp.cjs  Cargo.toml  package.json  tsconfig.json
config/: dev.toml
mail/: Cargo.toml
mail/src/: lib.rs
mercury/: Cargo.toml
mercury-web/: Cargo.toml
mercury-web/src/: lib.rs
mercury/src/: main.rs
smtp-server/: Cargo.toml  build.rs
smtp-server/src/: conn.rs  email.rs  error.rs  lib.rs  session.rs
smtp-server/src/session/: cmd.rs  cmd_parser.lalrpop  reply.rs
smtp-server/tests/: simple.rs
static/: index.html
test-util/: Cargo.toml
test-util/src/: lib.rs
web/: .gitignore  .pnp.cjs  package.json  tsconfig.json
web/src/: main.ts
web/src/components/: App.tsx
web/tools/: esbuild.js
