[package]
name = "mercury-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tower-http = "0.3"
axum-extra = { version = "0.3", default-features = false, features = ["spa"] }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
anyhow = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }