[package]
name = "smtp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["net", "sync", "macros"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-futures = "0.2"

[dev-dependencies]
lettre = { version = "0.10", default-features = false, features = ["smtp-transport", "hostname", "builder", "rustls-tls"] }
test-util = { path = "../test-util" }
tokio = { version = "1", default-features = false, features = ["net", "sync", "macros", "rt", "time"] }